fixed spacing at the bottom of some of the pages

--- a/src/components/pages/About.scss
+++ b/src/components/pages/About.scss
@@ -4,6 +4,8 @@
   font-family: 'Quicksand', sans-serif;
   font-weight: 300;
   justify-content: space-around;
+  margin-bottom: 80px;
+  // align-items: flex-start;
 
   .div {
     background-color: rgba(29, 73, 19, 0.87);
@@ -12,7 +14,6 @@
     border-radius: 25px;
     width: 45%;
     display: flex;
-    align-items: center;
   }
 
   .about {
@@ -33,9 +34,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 20px;
+    // margin: 20px;
     padding: 20px;
-    
     
     img {
       border-radius: 45px;
