--- a/src/components/pages/Portfolio.scss
+++ b/src/components/pages/Portfolio.scss
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
+  padding-bottom: 80px;
 
   .portfolio-page-container {
     background-color: rgba(29, 73, 19, 0.87);
