--- a/src/components/pages/Resume.scss
+++ b/src/components/pages/Resume.scss
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
+  margin-bottom: 80px;
   
   .resume-container {
     background-color: rgba(29, 73, 19, 0.87);
